--- a/apps/superadmin/package.json
+++ b/apps/superadmin/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "daisyui": "^5.0.43",
     "next": "15.3.3",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2"
   },
