--- a/apps/clientadmin/tsconfig.json
+++ b/apps/clientadmin/tsconfig.json
@@ -19,7 +19,8 @@
       }
     ],
     "paths": {
-      "@client/*": ["./src/*"]
+      "@client/*": ["./src/*"],
+      "@store/*": ["./src/store/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
