--- a/apps/clientadmin/package.json
+++ b/apps/clientadmin/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.43",
     "next": "15.3.4",
+    "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
