--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,16 @@
 /apps/superadmin/.next
 /apps/superadmin/.env
 
+/apps/clientadmin/node_modules
+/apps/clientadmin/package-lock.json
+/apps/clientadmin/.next
+/apps/clientadmin/.env
+
+/apps/renderer/node_modules
+/apps/renderer/package-lock.json
+/apps/renderer/.next
+/apps/renderer/.env
+
 /apps/api/node_modules
 /apps/api/package-lock.json
 /apps/api/.env
